[NCL-9404] enforce Java 8 in dto + transitives
this is a preparation for dto module to be added as dependency to pnc-api project